Login Form: Increase z-index to ensure ace code editor is not visible.

--- a/client/app/user/scss/_user-status.scss
+++ b/client/app/user/scss/_user-status.scss
@@ -58,7 +58,7 @@
 
 
 #logout-cancel {
-    z-index: 3;
+    z-index: 9;
     position: fixed;
     width: 100vw;
     height: 100vh;
@@ -75,7 +75,7 @@
     height: 100vh;
     text-align: center;
     display: block;
-    z-index: 3;
+    z-index: 8;
     background-color: rgba(255,255,255,0.97);
 }
 
@@ -96,7 +96,7 @@
     left: 0%;
     width: 100%;
     display: block;
-    z-index: 4;
+    z-index: 10;
 }
 
 @media(min-width: 992px) {
